syntax = "proto3";

option go_package = "common/protobuff";


service LocationHistoryService {
    rpc UpdateHistory (LocationUpdateRequest) returns (LocationUpdateReply);
}

message LocationUpdateRequest {
    string username = 1;
    double longitude = 2;
    double latitude = 3;
}


message LocationUpdateReply {
    Status status = 1;
    string error = 2;
}


enum Status {
    FAILED = 0;
    SUCCESS = 1;
}